added incidentio to alerts monitoring doc

--- a/alertconfig.mdx
+++ b/alertconfig.mdx
@@ -4,7 +4,7 @@ description: Configure Alerts
 published: true
 ---
 
-Connect your [Alert Thresholds](/docs/metricmonitor#add-alert-trigger) to external alerting tools like [PagerDuty](/docs/pagerduty) and [Slack](/docs/slack).
+Connect your [Alert Thresholds](/docs/metricmonitor#add-alert-trigger) to external alerting tools like [PagerDuty](/docs/pagerduty), [Slack](/docs/slack), and [IncidentIo](/docs/incidentio).
 
 ---
 
