docs: updating some infra docs

--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -150,7 +150,8 @@ infrastructure in your cloud account:
                 "autoscaling:*",
                 "application-autoscaling:*",
                 "dynamodb:*",
-                "dax:*"
+                "dax:*",
+                "application-autoscaling:*"
             ],
             "Effect": "Allow"
         }
