docs: fix grammar

--- a/reverse-etl.mdx
+++ b/reverse-etl.mdx
@@ -15,7 +15,7 @@ and our operational system is the online data store
 ([Redis](https://redis.com), [Cloud Memorystore](https://cloud.google.com/memorystore), or [DynamoDB](https://aws.amazon.com/dynamodb/)).
 Chalk's API client can be used to query the [online data store](/docs/query-basics) and the [offline data store](/docs/query-offline).
 one our [API clients](/docs/query-basics),
-while the offline data store queried by
+while the offline data store can be queried by
 our [bulk API](/docs/query-offline).
 
 Data from online resolvers is always loaded into the offline store
