Index a bunch of missing sidebar docs
Signed-off-by: Kelvin Lu <kelvin@chalk.ai>

--- a/embeddings.mdx
+++ b/embeddings.mdx
@@ -2,6 +2,7 @@
 title: Embeddings
 description: Automatically calculate embeddings from existing features
 comingSoon: true
+published: true
 ---
 
 Embedding models are generally used to calculate a [vector feature](/docs/feature-types#vectors). Chalk includes
