--- a/env-vars.mdx
+++ b/env-vars.mdx
@@ -1,6 +1,7 @@
 ---
 title: Environment Variables
 description: Access environment variables in your resolvers.
+published: true
 ---
 
 import { AddNewEnvVar } from '@/components/shared/envVar'
