--- a/faq.mdx
+++ b/faq.mdx
@@ -3,6 +3,7 @@ title: Frequently Asked Questions
 metaTitle: FAQs
 metaDescription: A collection of questions frequently asked by customers.
 description: A collection of questions frequently asked by customers
+published: true
 ---
 
 import {RBACDiagram} from '@/components/ArchitectureDiagram'
