--- a/feature-caching.mdx
+++ b/feature-caching.mdx
@@ -2,6 +2,7 @@
 title: Feature Caching
 metaTitle: Feature Caching
 description: Set max staleness to introduce caching.
+published: true
 ---
 
 ---
