--- a/local-development.mdx
+++ b/local-development.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Test Integrations Locally"
 description:  Execute resolvers that connect to external systems
+published: true
 ---
 
 ---
