--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -149,6 +149,9 @@ infrastructure in your cloud account:
                 "iam:AddClientIDToOpenIDConnectProvider",
                 "iam:ListInstanceProfilesForRole",
                 "iam:DeletePolicy",
+                "iam:UntagPolicy",
+                "iam:UntagRole",
+                "iam:UntagOpenIDConnectProvider",
                 "elasticloadbalancing:*",
                 "eks:*",
                 "ecr:*",
