--- a/configuration.mdx
+++ b/configuration.mdx
@@ -53,8 +53,8 @@ If you do want to split your features across multiple files, you'll need to use 
 ### Organizing Feature Definitions Across Files
 
 In large projects, it's common to split feature definitions across multiple Python modules.
-For unidirectional dependencies, this is straightforward. For example, if `user.py` imports
-`profile.py`, you can define the `User` and `Profile` features in separate files without
+For unidirectional dependencies, this is straightforward. For example, if `src/models/user.py` imports
+`src/models/profile.py`, you can define the `User` and `Profile` features in separate files without
 issues. However, if you have circular dependencies, you may run into problems.
 
 Chalk supports this, but circular imports can arise when features reference each other across files.
@@ -62,7 +62,7 @@ To avoid these issues, use the `if TYPE_CHECKING` block from the `typing` module
 
 Here's an example of how to do this cleanly:
 
-```python src/profile.py
+```python src/models/profile.py
 # Imports User directly, because user.py
 # wont import profile.py
 from src.user import User
@@ -73,7 +73,7 @@ class Profile:
     username: str
 ```
 
-```python src/user.py
+```python src/models/user.py
 from chalk.features import features
 from typing import TYPE_CHECKING
 
