--- a/configuration.mdx
+++ b/configuration.mdx
@@ -20,7 +20,8 @@ Your Chalk project's configuration is shared across the following files:
 1. `chalk.yaml` (or `chalk.yml`): Configuration for your project's deployment
 2. `.chalkignore`: Files to exclude from your project's deployment
 3. A requirements file: Default Python requirements for Chalk to install via `pip` (can be overridden in `chalk.yaml`).
-This can either be `requirements.txt` or a [Poetry](https://python-poetry.org/) `pyproject.toml`.
+This can either be `requirements.txt` or a `pyproject.toml`
+(via [Poetry](https://python-poetry.org/) or [uv](https://github.com/astral-sh/uv)).
 
 Here's our recommended repository structure:
 
@@ -93,6 +94,39 @@ class User:
 By quoting imports inside `if TYPE_CHECKING`,
 you avoid circular dependency errors while still
 maintaining type safety and feature linkage.
+
+If the relationship to `Profile` is optional, you can use `typing.Optional` or the `| None` syntax,
+but the _entire_ annotation should be quoted:
+
+```python src/models/user.py
+from chalk.features import features
+from typing import TYPE_CHECKING
+
+if TYPE_CHECKING:
+    from src.models.profile import Profile
+
+@features
+class User:
+    id: str
+    # All of `"Profile | None"` must be quoted, not just the `Profile` part
+    profile: "Profile | None"
+```
+
+A similar pattern should be used for `DataFrame` annotations:
+
+```python src/models/user.py
+from chalk.features import features
+from typing import TYPE_CHECKING
+
+if TYPE_CHECKING:
+    from src.models.profile import Profile
+
+@features
+class User:
+    id: str
+    # All of `"DataFrame[Transaction]"` must be quoted, not just the `Transaction` part
+    transactions: "DataFrame[Transaction]"
+```
 
 In a project with features living in different files, we recommend that the schema definition
 all live in a single folder, separate from the resolvers. In this case, your folder structure
@@ -247,8 +281,10 @@ your deployment should be added so that non-deployment code does not clutter or 
 
 ## Specifying Python Requirements
 
-Chalk will use install the Python requirements for your project as specified in the `requirements` parameter of your `chalk.yaml`
-file. This can either be a `requirements.txt` file or a `pyproject.toml`. You can specify this file's location 
+Chalk will use install the Python requirements for your project as specified in the `requirements`
+parameter of your `chalk.yaml` file. This can either be a `requirements.txt` file or a `pyproject.toml`.
+Chalk supports both `Poetry` and `uv` for managing your Python dependencies.
+You can specify this file's location
 and type in your `chalk.yaml` file like below: 
 
 ```yaml 
