Link to the release notes

--- a/configuration.mdx
+++ b/configuration.mdx
@@ -193,6 +193,7 @@ features and resolvers.
         <SubAttribute field='platform_version' kind='str'>
           Reference a version of the Chalk runtime that you want to use for this environment. Can be either a version
           tag, like `v3.0.0`, or a release stream like `stable`. If not specified, defaults to `stable`.
+          Releases are documented in the <a href="/docs/release-notes">Platform Release Notes</a>.
         </SubAttribute>
       </SubAttributeTable>
     </SubAttribute>
