--- a/resolver-tags.mdx
+++ b/resolver-tags.mdx
@@ -81,7 +81,7 @@ and don't need to return the same types.
 
 ### SQL resolver tags
 
-SQL resolvers can also specify flags via the `flags` comment.
+SQL resolvers can also specify flags via the `tags` comment.
 For example, if you wanted to use Snowflake for `Transaction` features
 in a fraud context and use Redshift for the same features in a signup
 context, you could write two different SQL file resolvers:
