--- a/resolver-tags.mdx
+++ b/resolver-tags.mdx
@@ -82,7 +82,7 @@ and don't need to return the same types.
 ### SQL resolver tags
 
 SQL resolvers can also specify flags via the `tags` comment.
-For example, if you wanted to use Snowflake for `Transaction` features
+For example, if you wanted to use Snowflake for `User` features
 in a fraud context and use Redshift for the same features in a signup
 context, you could write two different SQL file resolvers:
 
